...
    case horizontal = "Horizontal"
    case vertical = "Vertical"
}

enum SwiftACActionMode: String, Codable {
    case inline = "Inline"
    case popup = "Popup"
}

enum SwiftACActionRole: String, Codable {
    case button = "Button"
    case link = "Link"
    case tab = "Tab"
...
